Fix Java 8 compatibility issues
Remove Java 9+ API usage to ensure JDK 8 compatibility:
- Remove beginRequest/endRequest (JDBC 4.3, Java 9+) from DatabricksConnection
- Remove supportsSharding (JDBC 4.3, Java 9+) from DatabricksDatabaseMetaData
- Remove enquoteLiteral/enquoteIdentifier/enquoteNCharLiteral/isSimpleIdentifier (JDBC 4.3) from DatabricksStatement
- Replace Optional.isEmpty() with !isPresent() in DBFSVolumeClient, VolumeOperationProcessor, DatabricksTokenFederationProvider
- Replace CompletableFuture.delayedExecutor (Java 9+) with ScheduledExecutorService in DBFSVolumeClient and VolumeUploadCallback
- Replace String.repeat() with StringBuilder loop in InsertStatementParser
- Replace Stream.dropWhile() with for-loop in JulLogger
- Replace ProcessHandle with ManagementFactory.getRuntimeMXBean() in ProcessNameUtil
- Replace 3-arg Stream.iterate() with for-loop in DatabricksSdkClient
- Replace Matcher.appendReplacement/appendTail(StringBuilder) with StringBuffer in SQLInterpolator
- Replace URLDecoder.decode(String, Charset) with decode(String, String) in UserAgentManager
- Replace ByteArrayOutputStream.toString(Charset) with toString(String) in DatabricksPreparedStatement
- Replace Objects.requireNonNullElse with ternary in JsonChunkProvider
- Replace List.of/Map.of/Set.of with Guava equivalents in test files and MetadataResultConstants

Signed-off-by: Samikshya Chand <samikshya.chand@databricks.com>
Signed-off-by: samikshya-chand_data <samikshya.chand@databricks.com>